@@ -328,4 +328,9 @@ June 1, 2005
 June 7, 2005
   - Incorporate defect fix in guiintegrate.cc into this version.
 June 20, 2005
-  - Fix type on Spectrum.h  getAxisMapCount() had been spelled GetAxisMapCout().
+  - Fix type on Spectrum.h  getAxisMapCount() had been spelled GetAxisMapCout().June 21, 2005
+  - Forward port some fixes for tree parameter gui:
+    o gui writing tree variables and parameters with "" units doesn't put
+      {} for units but leaves it empty.
+    o Allow treevariable -set units optional.
+
